<resources>
    <string name="app_name">CoffeeSystem</string>
    <string name="title_home">Trang Chủ</string>
    <string name="title_dashboard">Danh Mục</string>
    <string name="title_notifications">Thông Báo</string>
    <string name="title_profile">Hồ Sơ</string>
    <string name="title_activity_detail_product">Chi Tiết Sản Phẩm</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">Tên tài khoản</string>
    <string name="pass">Mật khẩu</string>
    <string name="person_name">Họ và tên</string>
    <string name="email">Email</string>
    <string name="phone">Số điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="edit_profile">Cập Nhật Thông Tin</string>
    <string name="contact">Liện hệ</string>
    <string name="rule">Điều khoản</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="history_bill">Lịch sử đơn hàng</string>
    <string name="location_store">Vị trí cửa hàng</string>
</resources>